# ai-benchmark

./: .env.example  .env.local.tpl  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
benchmarks/asteroid-engine/: README.md  RUBRIC.md  TASK.md  benchmark.json
benchmarks/asteroid-engine/scripts/: setup.sh  (+1 more)
benchmarks/cruiser-reloaded/: README.md  RUBRIC.md  TASK.md  benchmark.json
benchmarks/retro-cruiser/: README.md  RUBRIC.md  TASK.md  benchmark.json
benchmarks/voidbreaker/: README.md  RUBRIC.md  TASK.md  benchmark.json
convex/: admin.ts  auth.ts  crypto.ts  http.ts  protocol.test.ts  protocol.ts  schema.ts  sync.ts
convex/_generated/: api.d.ts
data/: benchmark-history.sqlite
docs/plans/: 2026-07-20-convex-offline-sync.html
lib/: agents.mjs  discover.mjs  paths.mjs  runner.mjs  ui.mjs
scripts/: validate-convex-sync.mjs
solutions/: README.md
solutions/asteroid-engine/2026-07-01T13-56-34-689Z__codex__cli-default__reasoning-high__mode-standard/: CMakeLists.txt  README.md  build.sh  run.sh
solutions/asteroid-engine/2026-07-01T13-56-34-689Z__codex__cli-default__reasoning-high__mode-standard/src/: main.cpp
solutions/retro-cruiser/: README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: routeTree.gen.ts
src/lib/: agent-options.ts  benchmarks.functions.ts  benchmarks.server.ts  metrics.ts  mjs.d.ts  package-dependencies.server.test.ts  package-dependencies.server.ts  run-history.server.test.ts  run-history.server.ts  scorecard.ts
src/routes/: __root.tsx  index.tsx  plot.tsx
src/styles/: app.css
(+49 files in other folders)
